--- a/customers-front-app-thymeleaf/src/main/resources/application.properties
+++ b/customers-front-app-thymeleaf/src/main/resources/application.properties
@@ -17,10 +17,15 @@ spring.security.oauth2.client.provider.github.user-name-attribute=login
 # Keycloak Provider
 spring.security.oauth2.client.registration.keycloak.client-name=keycloak
 spring.security.oauth2.client.registration.keycloak.client-id=customers-client
-spring.security.oauth2.client.registration.keycloak.client-secret=vMbjwfEbUTPxhrAuGRI8hwt1zBj2H3nj
+spring.security.oauth2.client.registration.keycloak.client-secret=gWNspZmGfzxmggNnFHnYs2Ln74YavfcZ
 spring.security.oauth2.client.registration.keycloak.scope=openid,profile,email,offline_access
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.keycloak.redirect-uri=http://localhost:8081/login/oauth2/code/sdia-customer-client
-spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/customers-realm
+spring.security.oauth2.client.registration.keycloak.redirect-uri=${KEYCLOAK_REDIRECT_URI:http://localhost:8081/login/oauth2/code/customers-client}
+#spring.security.oauth2.client.provider.keycloak.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:8080/realms/customers-realm}
 
 spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
+
+spring.security.oauth2.client.provider.keycloak.authorization-uri=${KEYCLOAK_AUTH:http://localhost:8080/realms/customers-realm/protocol/openid-connect/auth}
+spring.security.oauth2.client.provider.keycloak.token-uri=${KEYCLOAK_AUTH_TOKEN:http://localhost:8080/realms/customers-realm/protocol/openid-connect/token}
+spring.security.oauth2.client.provider.keycloak.jwk-set-uri=${JWT_JWK_SET_URI:http://localhost:8080/realms/customers-realm/protocol/openid-connect/certs}
+inventory.service.base.uri=${INVENTORY_SERVICE_BASE_URI:http://localhost:8082}
