--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.application.name=inventory-service
 server.port=8082
 
-spring.datasource.url=jdbc:h2:mem:products-th-db
-spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:products-th-db
+#spring.h2.console.enabled=true
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/customers-realm
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/customers-realm/protocol/openid-connect/certs
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/inventory-db?createDatabaseIfNotExist=true}
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:8080/realms/customers-realm}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWK_SET_URI:http://localhost:8080/realms/customers-realm/protocol/openid-connect/certs}
